--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Minimal theme
+title: Moritz Bley
 logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
-show_downloads: true
+description: Welcome to my personal page 
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
