--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
-title: Moritz Bley
+title: 
 logo: /assets/img/logo.png
-description: Welcome to my personal page 
+github:
+  is_user_page: false
+description: Moritz Bley
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
