--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title:
 logo: /assets/img/logo.png
 github:
   is_user_page: false
-description: Moritz Bley
+description: 
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
