--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Moritz Bley
 logo: /assets/img/logo.png
 github:
   is_user_page: false
-description: 
+description: Personal webpage of Moritz Bley - publications and contact information.
 show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
